Fix margins and line spacing in recent activity widget

--- a/opendebates/static/less/base.less
+++ b/opendebates/static/less/base.less
@@ -1178,9 +1178,9 @@ body .flatpage {
 }
 
 .recent-activity-entry {
-  margin-bottom: 2px;
-  border-bottom: 1px dotted #ddd;
-  padding-bottom: 2px;
+  line-height: 16px;
+  margin-bottom: 8px;
+  padding-bottom: 8px;
   font-size: 12px;
 
   .recent-activity-entry-who,
@@ -1189,7 +1189,6 @@ body .flatpage {
   }
   .recent-activity-entry-what {
     font-weight: 700;
-    margin-left: 5px;
   }
 }
 
